---version 2.0.3 yet to be released---
24-sep-2008 - punkrockguy318 - --inputcfg can now be used without a filename
24-sep-2008 - punkrockguy318 - [ 2085437 ] should fix issues with missing
author field crashing fceux
24-sep-2008 - punkrockguy318 - [ 2047057 ] added uninstall script for gfceux
24-sep-2008 - punkrockguy318 - [ 2062823 ] fixed ppc build errors and added
LSB_FIRST option to build scripts
24-sep-2008 - punkrockguy318 - [ 2057006 ] --newppu option added to sdl,
disabled by default
24-sep-2008 - punkrockguy318 - [ 2057008 ] lua is now optional, thanks
shinydoofy for a patch.  also fixed some build issues.
22-sep-2008 - punkrockguy318 - [ 2008437 ] fixed an issue where flawed movie
would crash fceux on every startup
21-aug-2008 - punkrockguy318 - sdl - fixed issue where windowed mode would
always be set to 32 bpp
18-aug-2008 - zeromus - windows - SF [ 2058942 ] Load state as... does not use the savestate override dir (fixed; now, it does)
18-aug-2008 - zeromus - windows - permit user optionally to proceed through the movie savestate mismatch error condition, in case he knows what he is doing.
18-aug-2008 - zeromus - fix a bug in the savestate recovery code which prevent aborted savestate loads from recovering emulator state correctly.
18-aug-2008 - zeromus - windows - bind a menu option for display framecounter
17-aug-2008 - zeromus - windows - fix problem where replay dialog couldnt work when the process current directory had changed to something other than emulator base directory
17-aug-2008 - zeromus - windows - autoload the only useful rom or movie from an archive, in cases where there is only one
17-aug-2008 - zeromus - gracefully handle non-convertible broken utf-8 text without crashing
17-aug-2008 - zeromus - windows - don't read every archive file when scanning for replay dialog. scan them, and only look for *.fm2
17-aug-2008 - zeromus - debugger - fix issue where keyboard keys get stuck when switching between debugger window and main window